@@ -456,6 +456,21 @@ void PETScMatrix::transpmult(const GenericVector& x, GenericVector& y) const
   if (ierr != 0) petsc_error(ierr, __FILE__, "MatMultTranspose");
 }
 //-----------------------------------------------------------------------------
+void PETScMatrix::set_diagonal(const GenericVector& x)
+{
+  dolfin_assert(_A);
+
+  const PETScVector& xx = x.down_cast<PETScVector>();
+  if (size(1) != size(0) || size(0) != xx.size())
+    dolfin_error("PETScMatrix.cpp",
+                 "set diagonal of a PETSc matrix",
+                 "Matrix and vector dimensions don't match for matrix-vector set");
+
+  PetscErrorCode ierr = MatDiagonalSet(_A, xx.vec(), INSERT_VALUES);
+  if (ierr != 0) petsc_error(ierr, __FILE__, "MatDiagonalSet");
+  apply("insert");
+}
+//-----------------------------------------------------------------------------
 double PETScMatrix::norm(std::string norm_type) const
 {
   dolfin_assert(_A);
