@@ -162,6 +162,10 @@ namespace dolfin
     virtual void transpmult(const GenericVector& x, GenericVector& y) const
     { dolfin_not_implemented(); }
 
+    /// Set diagonal of a matrix
+    virtual void set_diagonal(const GenericVector& x)
+    { dolfin_not_implemented(); }
+
     /// Multiply matrix by given number
     virtual const STLMatrix& operator*= (double a);
 
